# lexibot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cfg.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  start.py  sw
alembic/: env.py
alembic/versions/: 54e3c3dba511_init.py  f6c1c8aaaeb0_help.py
src/lexicon/: main.py
src/lexicon/configuration/: cfg.env.example  cfg.py
src/lexicon/database/: session.py
src/lexicon/database/models/: base.py  models.py
src/lexicon/database/repo/: gamehistory_repo.py  gamesession_repo.py  hangman_repo.py  quiz_repo.py  stats_repo.py  user_repo.py
src/lexicon/dependencies/: di.py
src/lexicon/services/dto/: hangman.py  leaderboard.py  quiz.py
src/lexicon/services/entity/: exceptions.py  uow.py
src/lexicon/services/logic/: user.py
src/lexicon/services/logic/games/: hangman.py  quiz.py
src/lexicon/services/logic/stats/: stats.py
src/lexicon/telegram/: dispatcher.py  main.py
src/lexicon/telegram/callbacks/: stats.py
src/lexicon/telegram/keyboards/: menu_keyboard.py  profile_keyboard.py
src/lexicon/telegram/routers/: __init__.py
src/lexicon/telegram/routers/private/: hangman.py  (+2 more)
src/lexicon/telegram/states/: hangman.py
src/lexicon/tg_bot/: dispatcher.py
src/lexicon/tg_bot/callbacks/: hangman.py
src/lexicon/tg_bot/keyboards/: menu_keyboard.py  profile_keyboard.py
src/lexicon/tg_bot/middlewares/: chat.py  private.py
src/lexicon/tg_bot/routers/: __init__.py
src/lexicon/tg_bot/states/: hangman.py  quiz.py
start_scripts/: add_questions.py  hangman_words.json  prestart.sh
(+4 files in other folders)
